<resources>
    <string name="app_name">GoSports</string>
    <string name="app_browser_name">通用浏览器</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_news">运动</string>
    <string name="menu_trending">历史记录</string>
    <string name="menu_profile">我的</string>

    <string name="menu_notifications">通知</string>
    <string name="menu_issues">问题</string>
    <string name="menu_starred">收藏</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>

    <string name="about_copyright">© %1$s ZJUT 马晓峰 All rights reserved.</string>
    <string name="about_item_homepage">访问项目网址</string>
    <string name="about_item_author_github">联系晓峰</string>
    <string name="url_project_github">https://github.com/Snak0067/GoSports</string>
    <string name="url_author_github">https://gitee.com/XiaoFengCodeSpace</string>
    <string name="url_donation_link">https://gitee.com/xuexiangjys/Resource/blob/master/doc/sponsor.md</string>
    <string name="url_add_qq_group">http://qm.qq.com/cgi-bin/qm/qr?k=tiP-E6rDf0y77PRNfp2lNVcc9RsglPCM</string>

    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="lab_open_third_app">是否允许页面打开第三方应用?</string>

    <!-- 隐私政策弹窗   -->
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《%s隐私权政策》保护及处理你的信息。如果你不同意该政策，很遗憾我们将无法为你提供服务</string>
    <string name="lab_privacy_name">《%s隐私权政策》</string>

    <!-- 登录   -->
    <string name="etUser_hint">用户名</string>
    <string name="title_login_register">登录/注册</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="content_register">用户注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_please_input_email">请输入邮箱</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="title_login_by_phone">手机号码登陆</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入6位数验证码</string>
    <string name="regex_verify_code">^\\d{6}$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="lab_logout_confirm">是否确认退出账号？</string>
    <string name="title_user_protocol">用户协议</string>
    <string name="title_privacy_protocol">隐私政策</string>
    <string name="agree_protocol">我已阅读并同意</string>
    <string name="lab_and">和</string>
    <string name="rempsw">记住密码</string>

    <string name="title_jump_login">跳过</string>
    <string name="label_previous">上一条</string>
    <string name="label_next">下一条</string>
    <string name="tip_ignore_message">以后不再提示此类信息</string>
    <string name="tip_title">你知道吗？</string>

    <!--    运动相关    -->
    <string name="sports_start_sports">开始</string>
    <string name="sports_energy_cost">消耗能量</string>

    <!--    跑步相关     -->
    <string name="running_start">开始跑步</string>
    <string name="running_distance_gongli">公里</string>
    <string name="running_distance_zero">0.00</string>
    <string name="running_time_start_clock">00:00:00</string>
    <string name="running_no_number">--</string>
    <string name="running_tip_step">步数</string>
    <string name="running_tip_take_time">用时</string>
    <string name="running_heart_rate">心率</string>
    <string name="running_speed">配速</string>
    <string name="running_text_go">开始</string>
    <string name="running_text_stop">结束</string>
    <string name="running_text_pause">暂停</string>

    <!--    俯卧撑相关    -->
    <string name="push_up_start">俯卧撑开始</string>
    <string name="push_up_title">俯卧撑训练</string>
    <string name="push_up_tip_title">永远年轻，永远热烈盈眶</string>
    <string name="push_up_tip_subtitle">—— 杰克·凯鲁亚克</string>
    <string name="push_up_big_button_title">燃起来</string>
    <!--     跳绳相关      -->
    <string name="skipping_start">跳绳开始</string>
    <string name="skipping_title">跳绳训练</string>
    <string name="skipping_tip_title">从锻炼角度看，躺着不如坐着，坐着不如站着，站着不如走着</string>
    <string name="skipping_tip_subtitle">—— 法国·卢梭</string>
    <string name="skipping_big_button_title">开始跳</string>

    <string name="dash">-</string>
    <string name="viewGithub">View on GitHub</string>
    <string name="reportProblem">Problem Report</string>
    <string name="viewWebsite">Developer Website</string>
    <string name="actionSave">Save to Gallery</string>

    <string name="actionToggleValues">Toggle Values</string>
    <string name="actionToggleYValues">Toggle Y-Values</string>
    <string name="actionToggleXValues">Toggle X-Values</string>

    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="actionTogglePinch">Toggle PinchZoom</string>
    <string name="actionToggleAutoScale">Toggle Auto Scale</string>

    <string name="actionToggleLineValues">Toggle Line Values</string>
    <string name="actionToggleBarValues">Toggle Bar Values</string>
    <string name="actionToggleBarBorders">Toggle Bar Borders</string>
    <string name="actionToggleFilled">Toggle Filled</string>
    <string name="actionToggleCircles">Toggle Circles</string>
    <string name="actionToggleCandleShadow">Toggle Shadow Color</string>

    <string name="actionToggleCubic">Toggle Cubic</string>
    <string name="actionToggleStepped">Toggle Stepped</string>
    <string name="actionToggleHorizontalCubic">Toggle Horizontal Cubic</string>

    <string name="actionAddEntry">Add Entry</string>
    <string name="actionFeedMultiple">Add Multiple</string>
    <string name="actionRemoveEntry">Remove Entry</string>
    <string name="actionAddDataSet">Add Data Set</string>
    <string name="actionRemoveDataSet">Remove Data Set</string>
    <string name="actionClearChart">Clear chart</string>

    <string name="actionTogglePercent">Toggle Percent</string>
    <string name="actionToggleMinAngles">Toggle Minimum Angles</string>
    <string name="actionToggleHole">Toggle Hole</string>
    <string name="actionToggleCurvedSlices">Toggle Curved Slices</string>
    <string name="actionDrawCenterText">Draw Center Text</string>
    <string name="actionToggleHighlightCircle">Toggle Highlight Circle</string>
    <string name="actionToggleRotation">Toggle Rotation</string>
    <string name="actionToggleSpin">Spin Animation</string>

    <string name="animateX">Animate X</string>
    <string name="animateY">Animate Y</string>
    <string name="animateXY">Animate XY</string>
    <string name="right_title_everyday_dump">每日跳绳记录</string>
    <string name="right_title_time_analysis">运动时间分析</string>
    <string name="right_title_radar_analysis">运动趋势分析</string>


</resources>
