<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.skipping.SkippingActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:gravity="center"
        android:text="@string/skipping_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="5dp"
        android:src="@drawable/skipping" />


    <TextView
        android:id="@+id/skipping_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingLeft="@dimen/config_margin_30dp"
        android:text="@string/skipping_tip_title"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/skipping_tip_subtitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingLeft="@dimen/config_margin_30dp"
        android:text="@string/skipping_tip_subtitle"
        android:textAlignment="textStart"
        android:textColor="@color/app_color_gray"
        android:textStyle="bold">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/TextView_skipping_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/running_time_start_clock"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView_skipping_energy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/running_no_number"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/TextView_skipping_tip_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/running_tip_take_time"
            android:textAlignment="center"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/TextView_skipping_tip_energy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/sports_energy_cost"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_skipping_start"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:background="@drawable/start_sports_shape_circle"
            android:text="@string/sports_start_sports"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_skipping_count"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/pause_sports_shape_circle"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/skipping_big_button_title"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_skipping_end"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/stop_sports_shape_circle"
            android:gravity="center"
            android:text="@string/running_text_stop"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>