<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.running.RunningActivity">

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="414dp" />

    <LinearLayout
        android:id="@+id/running_function_board"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#50FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_distance"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/running_distance_zero"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="44sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_tip_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/running_distance_gongli"
            android:textAlignment="center"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/TextView_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/running_time_start_clock"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/running_no_number"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/TextView_tip_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/running_tip_take_time"
                android:textAlignment="center"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/TextView_tip_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/running_tip_step"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/config_margin_10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/TextView_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/running_no_number"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView_heartRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/running_no_number"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/TextView_tip_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/running_speed"
                android:textAlignment="center"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/TextView_tip_heartRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/running_heart_rate"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_running_start"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:background="@drawable/start_sports_shape_circle"
                android:text="@string/sports_start_sports"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_running_pause"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="36dp"
                android:background="@drawable/pause_sports_shape_circle"
                android:gravity="center"
                android:text="@string/running_text_pause"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_running_stop"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="36dp"
                android:background="@drawable/stop_sports_shape_circle"
                android:gravity="center"
                android:text="@string/running_text_stop"
                android:textSize="18sp" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>