<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="557dp"
        android:layout_above="@+id/linearOut1"
        android:layout_marginBottom="90dp" />

    <LinearLayout
        android:id="@+id/linearOut1"
        android:layout_above="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/everyday_dump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/right_title_everyday_dump"
            android:textColor="#3C3C3C"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/radar_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/right_title_radar_analysis"
            android:textColor="#3C3C3C"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/time_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/right_title_time_analysis"
            android:textColor="#3C3C3C"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="8dp"
        android:layout_toLeftOf="@+id/tvYMax"
        android:layout_marginRight="5dp"
        android:max="200"
        android:paddingBottom="12dp" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar2"
        android:layout_margin="8dp"
        android:layout_marginBottom="35dp"
        android:layout_toLeftOf="@+id/tvXMax"
        android:layout_marginRight="5dp"
        android:max="25"
        android:paddingBottom="12dp" />

    <TextView
        android:id="@+id/tvXMax"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekBar1"
        android:layout_alignParentRight="true"
        android:text="@string/dash"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvYMax"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekBar2"
        android:layout_alignParentRight="true"
        android:text="@string/dash"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
