<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.mikephil.charting.charts.RadarChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="645dp"></com.github.mikephil.charting.charts.RadarChart>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:text="能量消耗"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:gravity="left"
        android:text="运动时长"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:gravity="right"
        android:text="运动次数"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="520dp"
        android:gravity="left"
        android:text="达成成就次数"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:text="阅读健康知识时长"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@id/chart1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/everyday_dump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/right_title_everyday_dump"
            android:textColor="#3C3C3C"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/radar_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/right_title_radar_analysis"
            android:textColor="#3C3C3C"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/time_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/right_title_time_analysis"
            android:textColor="#3C3C3C"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
